[package]
name = "vince"
version = "0.3.22"
edition = "2021"
authors = ["Louise Montalvo <louanmontalvo@gmail.com>"]
license = "MIT"
description = "An audio-video synthesizer"
readme = true
repository = "https://github.com/lwizchz/vince"
keywords = ["audio", "video", "synth", "dsp"]

[profile.dev]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bevy = { version = "0.10.1" }
bevy_common_assets = { version = "0.6.0", features = ["toml"] }
bevy_framepace = "0.12.1"
cpal = "0.15.2"
hound = { version = "3.5.0", optional = true }
image = { version = "0.24.6", optional = true }
midir = { version = "0.9.1", optional = true }
midly = { version = "0.5.3", optional = true }
nokhwa = { version = "0.10.4", optional = true, features = ["input-native", "output-threaded"] }
oddio = "0.6.2"
rand = "0.8.5"
rustfft = { version = "6.1.0", optional = true }
screenshots = { git = "https://github.com/lwizchz/screenshots-rs", optional = true }
serde = "1.0.163"
typetag = "0.2.8"
y4m = { version = "0.8.0", optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[features]
default = ["video_in", "files", "midi", "pitch_shifter"]
video_in = ["dep:screenshots", "dep:nokhwa", "dep:image"]
files = ["dep:hound", "dep:y4m"]
midi = ["dep:midir", "dep:midly"]
pitch_shifter = ["dep:rustfft"]
