[package]
name = "vince"
version = "0.4.18"
edition = "2021"
authors = ["Louise Montalvo <louanmontalvo@gmail.com>"]
license = "MIT"
description = "An audio-video synthesizer"
readme = true
repository = "https://github.com/lwizchz/vince"
keywords = ["audio", "video", "synth", "dsp"]

[profile.dev]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bevy = { version = "0.16.1" }
bevy_common_assets = { version = "0.13.0", features = ["toml"] }
bevy_framepace = "0.19.0"
cpal = "0.16.0"
hound = { version = "3.5.1", optional = true }
image = { version = "0.25.6", optional = true }
midir = { version = "0.10.1", optional = true }
midly = { version = "0.5.3", optional = true }
nokhwa = { version = "0.10.7", optional = true, features = ["input-native", "output-threaded"] }
oddio = "0.7.4"
rand = "0.9.1"
rustfft = { version = "6.4.0", optional = true }
screenshots = { version = "0.7.3", optional = true }
serde = "1.0.188"
typetag = "0.2.13"
y4m = { version = "0.8.0", optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.4"

[features]
default = ["files", "midi", "pitch_shifter"]
video_in = ["dep:screenshots", "dep:nokhwa", "dep:image"]
files = ["dep:hound", "dep:y4m"]
midi = ["dep:midir", "dep:midly"]
pitch_shifter = ["dep:rustfft"]
